--- a/front/src/components/FeatureProducts/index.module.scss
+++ b/front/src/components/FeatureProducts/index.module.scss
@@ -26,11 +26,12 @@ font-size: 1rem;
     justify-content: space-between;
     gap: 0px;
     background-color: white;
-    padding: 30px;
+    padding: 30px 0;
     margin: 30px 0;
+  
 }
 .fea_item {
-    width: 60%;
+    width: 40%;
 }
 .fea_item img{
     width: 100%;
