--- a/front/src/pages/Header/index.module.scss
+++ b/front/src/pages/Header/index.module.scss
@@ -4,6 +4,7 @@ header{
 }
 .sell_head{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     
@@ -16,6 +17,7 @@ header{
 }
 .sell_head ul{
 display: flex;
+flex-wrap: wrap;
 align-items: center;
 gap: 30px;
 }
